<resources>
    <string name="app_name">FpvMeetUp</string>
    <string name="user_name">User Name :</string>
    <string name="password">Password :</string>
    <string name="new_account">No account yet ? Create one today!</string>
    <string name="register">Register</string>
    <string name="cancelar">Cancel</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
