<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ipbeja.pdm2.fpvmeetup.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegsName"
        android:layout_marginTop="39dp"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegsEmail"
        android:layout_marginTop="41dp"
        android:hint="@string/email"
        android:layout_below="@+id/txtRegsName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtRegsPassword"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:onClick="btnRegister_onClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="41dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btnRegsCancel"
            android:onClick="btnRegsCancel_onClick"
            android:layout_alignTop="@+id/btnRegister"
            android:layout_alignParentEnd="true"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
